<resources>
    <string name="app_name">Practic_8_PR-21.102_Glazirin_And_Maligin</string>

    <string name="direction">Выбери свое направление</string>
    <string name="direction_down">Выбери одну категорию</string>
    <string name="Name_1">Психология</string>
    <string name="Name_2">Бизнес</string>
    <string name="Name_3">Школа</string>
    <string name="Name_4">Отношения</string>

    <string name="Resultate">Показать результат</string>
    <string name="Phone">8-954-852-00-00</string>

    <string name="Choice">Ваш выбор</string>
    <string name="Text">Томас Маак.
        Никола Плесс
        "Ответственное лидерство"</string>
    <string name="Mony">890 рублей</string>
    <string name="Delivery">Доставка</string>
    <string name="Courier">Курьер</string>
    <string name="pickyp">Самовывоз</string>
    <string name="NameYou">Введите свое имя</string>
    <string name="PhoneYou">Введите свой номер телефоа</string>
    <string name="Order">Заказать</string>
    <string name="ToTheWebsite">На сайт</string>

    <string name="internet">Search</string>
    <string name="Develop">Developes</string>
    <string name="ToComeIn">Войти</string>
    <string name="TextAndroid">Android
    for Developes</string>
    <string name="textMain">Modern tools and resources to help you build
    experiences that people love, faster and
    easier, across every Android device</string>
    <string name="Search">Search</string>
    <string name="DownloadText">Download Android Studio</string>
    <string name="PlayText">Launch Play Console</string>
    <string name="Courses">View Android courses</string>
</resources>